--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,8 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation project(':react-native-reanimated')
     implementation project(':react-native-svg')
+    implementation 'com.facebook.fresco:fresco:2.0.0'
+    implementation 'com.facebook.fresco:animated-gif:3.2.0'
 
     // implementation 'com.google.firebase:firebase-analytics:21.4.0'
     // implementation 'com.google.firebase:firebase-auth:22.1.2'
@@ -178,7 +180,6 @@ dependencies {
 
     //  implementation project(':react-native-push-notification')
 
-    
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
