--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,9 @@ newArchEnabled=false
 hermesEnabled=false
 
 android.enableJetifier=true
+
+
+MYAPP_UPLOAD_STORE_FILE=crestest-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=crestest
+MYAPP_UPLOAD_STORE_PASSWORD=5I<]zHOoG8deave
+MYAPP_UPLOAD_KEY_PASSWORD=5I<]zHOoG8deave
