--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@react-native-firebase/firestore": "^21.6.1",
     "@react-native-firebase/in-app-messaging": "^21.6.1",
     "@react-native-firebase/messaging": "^21.6.1",
-    "@react-navigation/drawer": "^7.1.1",
-    "@react-navigation/stack": "^7.1.1",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
@@ -46,7 +48,7 @@
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-crypto-js": "^1.0.0",
     "react-native-device-info": "^14.0.2",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-gifted-charts": "^1.4.47",
     "react-native-gradle-plugin": "^0.71.19",
     "react-native-html-to-pdf": "^0.12.0",
@@ -63,7 +65,6 @@
     "react-native-reanimated-table": "^0.0.2",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
     "react-native-select-dropdown": "^3.3.4",
