--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.24"
-        clientId = "hdfcmaster"
+        // clientId = "hdfcmaster"
+        clientId = "35990"
     }
     repositories {
         google()
